--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "react": "^0.14.8",
-    "react-native": "^0.24.1"
+    "react-native": "^0.24.1",
+    "sails.io.js": "^0.13.6",
+    "socket.io-client": "~1.4.0"
   }
 }
